css/sass/style.scss
@font-face {
    font-family: Asap;
    src: url('/fonts/Asap-VariableFont_wght.woff2') format('woff2 supports variations'),
         url('/fonts/Asap-VariableFont_wght.woff2') format('woff2-variations');
    font-weight: 400 700;
    font-display: optional;
    font-style: normal;
}

@font-face {
    font-family: Asap;
    src: url('/fonts/Asap-Italic-VariableFont_wght.woff2') format('woff2 supports variations'),
         url('/fonts/Asap-Italic-VariableFont_wght.woff2') format('woff2-variations');
    font-weight: 400 700;
    font-display: optional;
    font-style: italic;
}

h1, h2, h3, h4, h5, h6 {
    line-height: 1.2;
}

img {
    max-width: 100%; height: auto;
}

body { 
    font-family: Asap, sans-serif; font-size: 1.5rem;
    line-height: 1.5; 
} 

main { 
    margin: 0 auto; 
    width: 90vw; width: clamp(16rem, 90vw, 50rem); 
} 

pre { 
    padding: 2rem 0; 
    overflow: auto; 
}

.logo {
    margin-top: 2rem;
}

@import '_prism-tomorrow-night.scss';

